<resources>
    <string name="app_name">User App</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">UserName</string>
    <string name="nav_header_subtitle">thimiratc@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_category">Store</string>
    <string name="menu_food_detail">Food Details</string>
    <string name="menu_cart">My Cart</string>
    <string name="menu_share">Share</string>
    <string name="menu_food_list">Food List</string>
    <string name="grocery_categories">Product Category</string>
    <string name="categories1">Best deals</string>
    <string name="best_deals">Most Viewed</string>
    <string name="homenav">Home</string>
    <string name="cartnav">Cart</string>
    <string name="favnav">Fav</string>
    <string name="accountnav">Account</string>
    <string name="settingsnav">Settings</string>
    <string name="food_name1">Food Name</string>
    <string name="see_reviews">Comments</string>
    <string name="see_reviews1">Leave a Feedback</string>
    <string name="size">Size</string>
    <string name="description">this text view include all the information of this prodcut</string>
    <string name="description1">Description</string>
    <string name="_1000">1000</string>
    <string name="todo3">TODO</string>
    <string name="addon">Add Extra Meals</string>
    <string name="clearcart">Clear All</string>
    <string name="action_search">Search</string>
    <string name="signout">Sign Out</string>
    <string name="imgCart">TODO</string>
    <string name="carpricevalue">100.00</string>
    <string name="food_namecart">Food name</string>
    <string name="name_reg">Name</string>
    <string name="emailreg">Email</string>
    <string name="phone_numberreg">Phone number</string>
    <string name="nicreg">NIC</string>
    <string name="addressreg">Home Address</string>
    <string name="addressreg1">Work Address</string>
    <string name="hometownreg">City</string>
    <string name="colomboreg">Colombo</string>
    <string name="note_this_service_only_available_in_colombo_area">Note: This Service only available in Colombo area.</string>
    <string name="food_name3">Food name</string>
    <string name="todo5">TODO</string>
    <string name="menu_view_orders">Order History</string>
    <string name="Settings">Settings</string>
    <string name="comment3">Comments</string>
    <string name="status1">Order Placed</string>
    <string name="status2">Paid</string>
    <string name="_2017001">2017001</string>
    <string name="_2019_10_21">2019-10-21</string>
    <string name="looks_like_you_haven_t_added_anything_to_your_cart_yet">Looks like you haven\'t added anything to your cart yet</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="total">Total Amount</string>
    <string name="_000_00">000.00</string>
    <string name="confirm_order">Buy now</string>
    <string name="todo8">TODO</string>
    <string name="todo">TODO</string>
    <string name="todo20">TODO</string>
    <string name="todo9">TODO</string>
    <string name="product_name_here">Product name here</string>
    <string name="todo10">TODO</string>
    <string name="todo11">TODO</string>
    <string name="rs123">Rs</string>
    <string name="klju">/=</string>
    <string name="todo12">TODO</string>
    <string name="todo13">TODO</string>
    <string name="popular_category2">Popular Category</string>
    <string name="todo15">TODO</string>
    <string name="_00_00123">00.00</string>
    <string name="todo16">TODO</string>
    <string name="todo17">TODO</string>
    <string name="todo18">TODO</string>
    <string name="todo19">TODO</string>
    <string name="tell_others_what_you_think">Write here...</string>
    <string name="name123">Name</string>
    <string name="date12">Date</string>
    <string name="this_is_a_comment_for_this_product">this is a comment for this product  </string>
    <string name="todo21">TODO</string>
    <string name="comments123">Comments</string>
    <string name="todo24">TODO</string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="write_a_note">Write a Note</string>
    <string name="visa_debit_card_paypal">Visa / Debit Card / PayPal</string>
    <string name="select_payment_method">Select payment method</string>
    <string name="current_location">Current Location</string>
    <string name="work_place_address">Work Place Address</string>
    <string name="home_address">Home Address</string>
    <string name="select_delivery_method">Set Address</string>
    <string name="adddress">Adddress</string>
    <string name="address">Address</string>
    <string name="todo30" />
    <string name="descs">Looks like you havent added anything to your cart yet.
    Looks like you haven\'t added anything to your cart yet
    Looks like you haven\'t added anything to your cart yet
    Looks like you haven\'t added anything to your cart yet
    Looks like you haven\'t added anything to your cart yet
    Looks like you haven\'t added anything to your cart yet
    Looks like you haven\'t added anything to your cart yet
    Looks like you haven\'t added anything to your cart yet
    Looks like you haven\'t added anything to your cart yet
    Looks like you haven\'t added anything to your cart yet
    Looks like you haven\'t added anything to your cart yet
    Looks like you haven\'t added anything to your cart yet
    Looks like you haven\'t added anything to your cart yet
    Looks like you haven\'t added anything to your cart yet</string>
    <string name="add_to_cart31" />

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCxbNNYk5UbQD7dwgb2JKTswWa3fS_BvD8</string>
    <string name="title_activity_tracking_order">Map</string>


</resources>
