<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/slide_ic_home"
        android:title="@string/homenav" />

    <item
        android:id="@+id/navigation_cart"
        android:icon="@drawable/slide_ic_cart"
        android:title="@string/cartnav" />

    <item
        android:id="@+id/navigation_fav"
        android:icon="@drawable/slide_ic_fav"
        android:title="@string/favnav" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/slide_ic_account"
        android:title="@string/accountnav" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/slide_ic_settings"
        android:title="@string/settingsnav" />

</menu>
