<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/home_group">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/slide_ic_home"
            android:title="@string/menu_home" />
    </group>

    <group android:id="@+id/category_group">
        <item
            android:id="@+id/nav_menu"
            android:icon="@drawable/slide_ic_category"
            android:title="@string/menu_category" />
    </group>

    <group android:id="@+id/cart_group">
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/slide_ic_cart"
            android:title="@string/menu_cart" />
    </group>

    <group android:id="@+id/view_order_group">
        <item
            android:id="@+id/nav_view_order"
            android:icon="@drawable/ic_history_black_24dp"
            android:title="@string/menu_view_orders" />
    </group>

    <group
        android:id="@+id/user_group">
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/signout" />
    </group>




</menu>
