<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/button_design2"
    android:orientation="vertical"
    android:padding="8dp">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:hint="@string/name_reg"
            android:inputType="text"
            android:textColor="#2E2D2D"
            android:textStyle="bold"
            android:textSize="18sp"
            android:autofillHints="" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:inputType="textEmailAddress"
            android:hint="@string/emailreg"
            android:textColor="#2E2D2D"
            android:textStyle="bold"
            android:textSize="18sp"
            android:autofillHints="" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edt_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:fontFamily="sans-serif"
            android:hint="@string/phone_numberreg"
            android:textColor="#2E2D2D"
            android:textStyle="bold"
            android:textSize="18sp"
            android:inputType="phone"
            android:autofillHints="" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edt_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:hint="@string/addressreg"
            android:inputType="textPostalAddress"
            android:textColor="#2E2D2D"
            android:textStyle="bold"
            android:textSize="18sp"
            android:autofillHints="" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edt_hometown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:hint="@string/hometownreg"
            android:text="@string/colomboreg"
            android:focusable="false"
            android:textColor="#2E2D2D"
            android:textStyle="bold"
            android:textSize="18sp"
            android:inputType="text"
            android:autofillHints="" />

    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edt_nic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:hint="@string/nicreg"
            android:textColor="#2E2D2D"
            android:textStyle="bold"
            android:textSize="18sp"
            android:inputType="number"
            android:autofillHints="" />

    </com.google.android.material.textfield.TextInputLayout>




</LinearLayout>