<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/dark_effect"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        app:cardBackgroundColor="@color/dark_background"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dark_background"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="110dp"
                android:contentDescription="@string/todo18"
                android:src="@drawable/img_order"
                android:tint="@color/dark_sub_text" />

            <ImageView
                android:id="@+id/img_order"
                android:layout_width="80dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:contentDescription="@string/todo19"
                android:scaleType="fitXY"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_order_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="@font/allerrg"
                    android:text="@string/_2019_10_21"
                    android:textColor="@color/dark_sub_primary"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_order_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="@font/allerrg"
                    android:text="@string/_2017001"
                    android:textColor="@color/dark_sub_primary"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/txt_order_commnet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/allerrg"
                    android:layout_marginEnd="8dp"
                    android:text="@string/comment3"
                    android:textColor="@color/dark_sub_text"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <RelativeLayout

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="0dp"
                        android:layout_marginEnd="8dp"
                        android:background="@drawable/button_design5"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/txt_order_stsus"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:paddingLeft="5dp"
                            android:paddingRight="5dp"
                            android:text="@string/status1"
                            android:textAlignment="center"
                            android:textColor="@color/color_white"
                            android:textSize="12sp"
                            android:textStyle="bold" />


                    </RelativeLayout>

                    <RelativeLayout

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="0dp"
                        android:layout_marginEnd="8dp"
                        android:background="@drawable/button_design7"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/show_total"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="10dp"

                            android:paddingRight="10dp"
                            android:text="@string/status2"
                            android:textColor="@color/dark_sub_primary"
                            android:textSize="12sp"
                            android:textStyle="bold" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:visibility="gone"
                        android:layout_width="15dp"
                        android:layout_height="18dp"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="0dp"
                        android:layout_marginEnd="8dp"
                        android:orientation="horizontal">

                       <ImageView
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:src="@drawable/confirms"/>

                    </RelativeLayout>

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>