<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/txt_dismiss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:src="@drawable/ic_close_black_24dp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/latoregular"
            android:text="Update Account"
            android:textColor="@color/dark_background"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lable_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/latoregular"
            android:text="Successfully Verified your number +94717701797"
            android:textColor="#4CAF50"
            android:textSize="12sp"
            android:textStyle="normal" />

        <TextView
            android:gravity="center"
            android:layout_marginBottom="2dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/latoregular"
            android:text="Search here to change your Home address"/>

        <RelativeLayout
            android:background="@drawable/button_design4"
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <fragment
                android:id="@+id/places_autocomplete_fragment"
                android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </RelativeLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:backgroundTint="@color/color_black"
            android:textColorHint="@color/color_black"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:fontFamily="@font/latoregular"
                android:hint="@string/name_reg"
                android:inputType="text"
                android:textColor="#2E2D2D"
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:fontFamily="@font/latoregular"
                android:hint="@string/emailreg"
                android:inputType="textEmailAddress"
                android:textColor="#2E2D2D"
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <EditText
                android:id="@+id/edt_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:focusable="false"
                android:fontFamily="@font/latoregular"
                android:hint="@string/phone_numberreg"
                android:inputType="phone"
                android:textColor="#2E2D2D"
                android:textSize="18sp"
                android:visibility="gone" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:focusable="false"
                android:id="@+id/txt_address_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:fontFamily="@font/latoregular"
                android:hint="@string/addressreg"
                android:inputType="textPostalAddress"
                android:textColor="#2E2D2D"
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_work_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:fontFamily="@font/latoregular"
                android:hint="@string/addressreg1"
                android:inputType="textPostalAddress"
                android:textColor="#2E2D2D"
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <EditText
                android:id="@+id/edt_hometown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:focusable="false"
                android:fontFamily="@font/latoregular"
                android:hint="@string/hometownreg"
                android:inputType="text"
                android:text="@string/colomboreg"
                android:textColor="#2E2D2D"
                android:textSize="18sp"
                android:visibility="gone" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText

                android:id="@+id/edt_nic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:fontFamily="@font/latoregular"
                android:hint="@string/nicreg"
                android:inputType="text"
                android:textColor="#2E2D2D"
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/button_design7"
            android:fontFamily="@font/latoregular"
            android:text="Update"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="19sp" />


    </LinearLayout>



</LinearLayout>