<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="8dp"
    app:cardCornerRadius="5dp"
    app:cardElevation="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/img_food_image"
            android:layout_width="match_parent"
            android:fontFamily="@font/product_sans_regular"
            android:layout_height="match_parent"
            android:layout_marginBottom="75dp"
            android:contentDescription="@string/todo5"
            android:scaleType="fitXY" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="#FFFFFF"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:padding="0dp"
            android:weightSum="10">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="10"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_food_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:fontFamily="@font/latoregular"
                    android:text="@string/food_name3"
                    android:textColor="@color/dark_effect1"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RatingBar
                        android:id="@+id/rating_bar"
                        style="?attr/ratingBarStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:numStars="5"
                        android:progressTint="@color/color_yellow" />

                    <TextView
                        android:id="@+id/review_count"
                        android:layout_width="wrap_content"
                        android:layout_height="15dp"
                        android:layout_marginLeft="6dp"
                        android:fontFamily="@font/product_sans_regular"
                        android:text="12"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/rating_bar_one"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/latoregular"
                        android:text="(4.8)"
                        android:textColor="#CDDC39"
                        android:textSize="11sp"
                        android:visibility="gone" />


                </LinearLayout>

                <TextView
                    android:id="@+id/txt_food_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/product_sans_regular"
                    android:text="@string/_00_00123"
                    android:textColor="@color/dark_effect1"
                    android:textSize="14sp" />


            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:id="@+id/img_fav"
            android:layout_width="40dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/todo30"
            android:src="@drawable/ic_favorite_black_24dp"
            android:tint="@color/color_heart" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/latoregular"
            android:paddingLeft="8dp"
            android:paddingRight="35dp"
            android:text="Review(s)"
            android:textColor="@color/colorAccent1"
            android:textSize="12sp"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/img_quick_cart"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="5dp"
            android:background="@drawable/button_design_for_cart"
            android:paddingLeft="5dp"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:src="@drawable/ic_add_black_24dp"

            />

    </RelativeLayout>
</androidx.cardview.widget.CardView>